# yambot

./: .gitignore  Cargo.toml  README.md  commands.toml.example  config.toml  config.toml.example  shell.nix  tts_languages.toml
assets/overlay/: index.html
assets/overlay/css/: style.css
assets/overlay/js/: main.js  wheel.js
src/: audio.rs  handlers.rs  main.rs
src/backend/: command.rs  config.rs  helix.rs  mod.rs  sfx.rs  sounds.rs  watcher.rs
src/backend/commands/: context.rs  executor.rs  mod.rs  parser.rs  registry.rs
src/backend/overlay/: mod.rs  server.rs  websocket.rs
src/backend/sfx/: mod.rs  sounds.rs  tts.rs  watcher.rs
src/backend/sounds/: mod.rs  sfx.rs  watcher.rs
src/backend/tts/: languages.rs  mod.rs  queue.rs  service.rs
src/backend/twitch/: api.rs  auth.rs  client.rs  error.rs  eventsub.rs  messages.rs  mod.rs  websocket.rs
src/backend/twitch_api/: eventsub.rs  helix.rs  mod.rs
src/ui/: commands.rs  home.rs  mod.rs  overlay.rs  settings.rs  sfx.rs  theme.rs  tts.rs
