[package]
name = "yambot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
twitch-irc = "5.0.1"
egui = "0.29.1"
eframe = { version = "0.29.1", features = [
  "default",
  "__screenshot", 
] }
egui_extras = { version = "0.29.1", features = ["default", "all_loaders"] }
image = { version = "0.25.4", features = ["jpeg", "png"] }
chrono = "*"
toml = "0.8.19"
project-root = "0.2.2"
log = "0.4.22"
env_logger = "0.11.5"
rodio = "0.20.1"
notify = "7.0.0"
tokio-stream = "0.1.17"
