[package]
name = "yambot"
version = "0.1.2"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
egui = "0.33.0"
eframe = { version = "0.33.0", features = [
  "default",
  "__screenshot",
] }
egui_extras = { version = "0.33.0", features = ["default", "all_loaders"] }
image = { version = "0.25.6", features = ["jpeg", "png"] }
chrono = { version = "0.4.41", features = ["serde"] }
toml = "0.9.8"
project-root = "0.2.2"
log = "0.4.27"
env_logger = "0.11.8"
rodio = "0.21.1"
notify = "8.2.0"
tokio-stream = "0.1.17"

tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
urlencoding = "2.1.3"
